--- a/.github/workflows/ci-old.yml
+++ b/.github/workflows/ci-old.yml
@@ -95,7 +95,7 @@ jobs:
       matrix:
         os: [macos-13, macos-15, ubuntu-24.04, ubuntu-22.04-arm]
         # os: [macos-15]
-        node: [16]
+        node: [16, 25]
     steps:
 
       - name: Checkout code
